2006-12-04  Francois Dechelle  <francois@dechelle.net>

	* Fixing compilation problems on FreeBSD

2006-10-22  viara  <viara@sysra.com>

	* Suppressed signal calls in client lib
	* Suppressed memory leaks in CollArray::retrieveAt

2006-09-08  viara  <viara@sysra.com>

	* Corrected a bug in indexed arrays on little endian platforms

2006-09-07  viara  <viara@sysra.com>

	* Added eyedb::ObjectObserver
	* Suppressed a few memory leaks
	* Corrected a bug in class update

2006-08-25  Francois Dechelle  <francois@localhost.localdomain>

	* Added pkg-config support

2006-05-29 Francois Dechelle <francois@dechelle.net>

	* Release 2.7.9
	
2006-05-29  Eric Viara  <viara@sysra.com>

	* Fixed litteral collection one more bug within direct attributes
	* Fixed unitialized Database handle in litteral collections
	* Fixed commit() in OQL which hangs at exit

2006-05-26 Francois Dechelle <francois@dechelle.net>

	* Release 2.7.8
	
2006-05-25  viara  <viara@sysra.com>

	* Fixed litteral collection bug within direct attributes
	* Fixed unitialized enum attribute assignement
	* Fixed int32 and int64 comparison in OQL
	* Fixed append bug (server crash) in OQL

2006-05-23 Francois Dechelle <francois@dechelle.net>

	* Added version definitions (major,minor,patch)

2006-05-15  Francois Dechelle <francois@dechelle.net>

	* Updated examples w.r.t. Makefile.eyedb with prefixed variables
	* Changed eyedb-post-install.sh (no > /dev/null, using plain configuration)
	* Fixed 8 bytes aligned stack allocation in src/eyedbsm/xdr_p.h for MapHeader

2006-05-04 Francois Dechelle <francois@dechelle.net>

	* Release 2.7.7
	
2006-05-03  Eric Viara  <viara@sysra.com>

	* Fixed problems for schema updates
	* Fixed problems in OQL garbage collector
	* Suppressed EYEDB_NUMVERSION in generated ODL

2006-04-12  Francois Dechelle <francois@dechelle.net>

	* Fixed multiple symbols link error, isnan() detection on Mac OS X

2006-03-28  Eric Viara  <viara@sysra.com>
